--- a/content/websites/patterns/menu-local-nav/menu-local-nav.html
+++ b/content/websites/patterns/menu-local-nav/menu-local-nav.html
@@ -6,7 +6,7 @@
     <nav>
       <ul id="local-nav" class="dropdown menu float-left" data-description="navigational" role="menubar">
         <li role="menuitem"><a href="#"><i class="icon icon-generic" data-icon="H"></i> Overview</a></li>
-        <li role="menuitem"><a href="#"><i class="icon icon-generic" data-icon="i"></i> Universal princiciples</a></li>
+        <li role="menuitem"><a href="#"><i class="icon icon-generic" data-icon="i"></i> Universal principles</a></li>
         <li role="menuitem"><a href="#"><i class="icon icon-generic" data-icon=";"></i> Templates</a></li>
         <li role="menuitem"><a href="#"><i class="icon icon-generic" data-icon="N"></i> Create websites</a></li>
         <li role="menuitem"><a href="#"><i class="icon icon-generic" data-icon=";"></i> Web patterns</a></li>
